<resources>
    <string name="app_name">Stefapp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_detox">Психологический детокс</string>
    <string name="menu_protection1">Энергетическая защита</string>
    <string name="menu_protection2">Психологическая защита</string>
    <string name="menu_protection3">Информационная защита</string>
    <string name="menu_meditation">Медитации</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="Topic">
        <item>Психологический детокс</item>
        <item>Энергетическая защита</item>
        <item>Психологическая защита</item>
        <item>Информационная защита</item>
        <item>Медитации</item>

    </string-array>

    <string-array name="Chapter">
        <item>Lo - бесплатный</item>
        <item>Med - платный</item>
        <item>Hi - совсем платный</item>
    </string-array>
</resources>