<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/detox"
            android:icon="@drawable/ic_action_name"
            android:title="@string/menu_detox" />

        <item
            android:id="@+id/prot1"
            android:icon="@drawable/ic_action_name"
            android:title="@string/menu_protection1" />
        <item
            android:id="@+id/prot2"
            android:icon="@drawable/ic_action_name"
            android:title="@string/menu_protection2" />
        <item
            android:id="@+id/prot3"
            android:icon="@drawable/ic_action_name"
            android:title="@string/menu_protection3" />
        <item
            android:id="@+id/meditation"
            android:icon="@drawable/ic_action_name"
            android:title="@string/menu_meditation" />


    </group>

    <group android:id="@+id/other">
           <item
            android:id="@+id/favoriteAudio"
            android:icon="@drawable/fav_icon"
            android:title="Избранные записи" />
    </group>

    <group android:id="@+id/andOther">
        <item
            android:id="@+id/mm_6"
            android:onClick="Instagram"
            android:title="Instagram" />
        <item
            android:id="@+id/mm_7"
            android:onClick="MailUs"
            android:title="Mail us" />
    </group>

</menu>